# rusian

./: .gitignore  README.md  build.gradle.kts  content-pack.json  gradle.properties  manifest.json  settings.gradle.kts
.github/workflows/: deploy-web.yml
app/: build.gradle.kts
app/src/androidTest/java/com/rusian/app/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/rusian/app/data/local/: RusianDatabaseTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: content-pack.json  manifest.example.json
app/src/main/cpp/: CMakeLists.txt  rusian_llama_jni.cpp
app/src/main/java/com/rusian/app/: MainActivity.kt  RusianApplication.kt
app/src/main/java/com/rusian/app/core/di/: AppModule.kt  RepositoryModule.kt
app/src/main/java/com/rusian/app/core/work/: AiGenerationWorkScheduler.kt  AiGenerationWorker.kt  SyncWorkScheduler.kt  SyncWorker.kt
app/src/main/java/com/rusian/app/data/chat/: LlamaCppLocalModelRunner.kt  LocalModelRunner.kt  NativeLlama.kt  StubLocalModelRunner.kt
app/src/main/java/com/rusian/app/data/local/: RoomConverters.kt  RusianDatabase.kt
app/src/main/java/com/rusian/app/data/preferences/: SyncPolicy.kt  UserPreferences.kt  (+2 more)
app/src/main/java/com/rusian/app/ui/: AppRoot.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/rusian/app/: ExampleUnitTest.kt
docs/: CNAME  index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: DEPLOY.md  README.md  app.js  package.json  server.mjs  styles.css
(+81 files in other folders)
